--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rows">
+        <activity android:name=".ActivitiesActivity"
+            android:exported="false" />
         <activity
             android:name=".TrendViewActivity"
             android:exported="false" />
