Settings button and Activity.class added to project

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rows">
-        <activity android:name=".ActivitiesActivity"
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ActivitiesActivity"
             android:exported="false" />
         <activity
             android:name=".TrendViewActivity"
