--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rows">
+    package="com.kalzakath.zoodle">
 
     <application
         android:allowBackup="true"
@@ -9,19 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Rows">
-        <activity android:name=".FeelingsActivity"
+        <activity android:name="com.kalzakath.zoodle.FeelingsActivity"
             android:exported="false" />
         <activity
-            android:name=".SettingsActivity"
+            android:name="com.kalzakath.zoodle.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".ActivitiesActivity"
+            android:name="com.kalzakath.zoodle.ActivitiesActivity"
             android:exported="false" />
         <activity
-            android:name=".TrendViewActivity"
+            android:name="com.kalzakath.zoodle.TrendViewActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.kalzakath.zoodle.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
