--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,11 +14,11 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.rows"
+        applicationId 'com.kalzakath.zoodle'
         minSdk 29
         targetSdk 32
         versionCode 1
-        versionName "1.0"
+        versionName 'Mal Beta'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
