--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.2.0"
     }
 }
 
@@ -18,7 +19,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
 }
 
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
