--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 buildscript {
     repositories {
             google()
-            jcenter()
             mavenCentral()
             maven { url 'https://jitpack.io' }
         }
 
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.3.2.0"
+        classpath 'de.mannodermaus.gradle.plugins:android-junit5:1.6.1.0'
+        classpath 'com.android.tools.build:gradle:7.2.0'
     }
 }
 
