--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.2"
     testImplementation "io.mockk:mockk:1.12.3"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.20"
 
 }
