--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
             unitTests.returnDefaultValues = true
         }
     }
+    packagingOptions {
+        resources.excludes += "DebugProbesKt.bin"
+    }
     namespace 'com.kalzakath.zoodle'
 }
 
@@ -58,6 +61,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.2")
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.3.2"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.3.2"
